# Arthur

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  emscipten.bat
Resources/: app.rc
cmake/: CompilerWarnings.cmake
repo/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/API/: BaseScanner.cpp  BaseScanner.hpp  CMakeLists.txt  Common.hpp  ContractInfo.cpp  ContractInfo.hpp  TokenInfo.cpp  TokenInfo.hpp
src/Audio/: CMakeLists.txt  Sound.cpp  Sound.hpp
src/DataFeed/: CMakeLists.txt  Compression.cpp  Compression.h  NeatData.cpp  NeatData.hpp  NeatStructure.hpp
src/Database/: CMakeLists.txt  MySqlConnector.cpp  MySqlConnector.hpp
src/Demo/: CMakeLists.txt  Demo.cpp  Demo.hpp
src/Excel/: CMakeLists.txt  ExcelAutomation.cpp  ExcelAutomation.hpp  ExcelHeader.hpp
src/Greeks/: CMakeLists.txt  Greeks.cpp  Greeks.hpp
src/Greeks/IVCalculator/: CMakeLists.txt  Model2.cpp  Model2.h  black_scholes.cpp  black_scholes.h  bs_prices.h  interval_bisection.h
src/Knight/: CMakeLists.txt  MathParser.cpp  MathParser.hpp  Scanner.cpp  Scanner.hpp  exprtk.hpp
src/include/: Arthur.hpp  BaseSocket.hpp  CMakeLists.txt  Colors.hpp  ColumnGenerator.hpp  ConfigLoader.hpp  Configuration.hpp  Enums.hpp  Excel.hpp  GreekBook.hpp  Logger.hpp  ManualOrder.hpp  MarketWatch.hpp  MessageBroker.hpp  Multicast.hpp  OpenOrders.hpp  OptionChain.hpp  OrderBook.hpp  OrderForm.hpp  OrderHistory.hpp  PendingBook.hpp  Portfolio.hpp  PortfolioInterface.hpp  PortfolioScanner.hpp  Position.hpp  PreCompileHeader.hpp  Signal.hpp  SplashScreen.hpp  Sqlite.hpp  StoreProcedures.hpp  StrategyWorkspace.hpp  Structure.hpp  TableColumnInfo.hpp  TemplateBuilder.hpp  Themes.hpp  TradeBook.hpp  TradeHistory.hpp  TradeTracker.hpp  Utils.hpp  plf_nanotimer.h
src/source/: Arthur.cpp  BaseSocket.cpp  CMakeLists.txt  ColumnGenerator.cpp  ConfigLoader.cpp  Excel.cpp  External.cpp  GreekBook.cpp  ManualOrder.cpp  MarketWatch.cpp  MessageBroker.cpp  Multicast.cpp  OpenOrders.cpp  OptionChain.cpp  OrderBook.cpp  OrderForm.cpp  OrderHistory.cpp  PendingBook.cpp  Portfolio.cpp  PortfolioInterface.cpp  PortfolioScanner.cpp  Position.cpp  SplashScreen.cpp  Sqlite.cpp  StrategyWorkspace.cpp  TemplateBuilder.cpp  Themes.cpp  TradeBook.cpp  TradeHistory.cpp  TradeTracker.cpp  Utils.cpp
